fix z-index for navbar pop out

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   width: 35%;
   font-size: 14px;
   font-weight: bold;
+  z-index: 100;
 }
 
 .name {
